--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <section>
         <h2>Online demo:</h2>
         <ol class="demo-list">
-          <li><a href="demos/demo1.html">Demo 1</a></li>
-          <li><a href="demos/demo2.html">Demo 2</a></li>
-          <li><a href="demos/demo3.html">Demo 3</a></li>
-          <li><a href="demos/demo4.html">Demo 4</a></li>
-          <li><a href="demos/demo5.html">Demo 5</a></li>
+          <li><a href="demos/demo1.html">Demo 1 - 結合 Google Map 與捷運資料</a></li>
+          <li><a href="demos/demo2.html">Demo 2 - 利用 D3.js 打造戰爭迷霧</a></li>
+          <li><a href="demos/demo3.html">Demo 3 - D3.js Voronoi Diagram - 尋找最近停車場</a></li>
+          <li><a href="demos/demo4.html">Demo 4 - 北市停車場資訊熱圖</a></li>
+          <li><a href="demos/demo5.html">Demo 5 - 停車場資訊綜合統計與分析 - 蜂巢圖</a></li>
         </ol>
       </section>
 
