--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li><a href="demos/demo3.html">Demo 3 - D3.js Voronoi Diagram - 尋找最近停車場</a></li>
           <li><a href="demos/demo4.html">Demo 4 - 北市停車場資訊熱圖</a></li>
           <li><a href="demos/demo5.html">Demo 5 - 停車場資訊綜合統計與分析 - 蜂巢圖</a></li>
+          <li><a href="demos/demo5.html">Demo 6 - 移動距離的視覺化</a></li>
         </ol>
       </section>
 
