remove init func

--- a/demos/demo6.html
+++ b/demos/demo6.html
@@ -20,7 +20,7 @@
 <input id="range" type="range" list="data1" value="0" max="53000" min="0" name="range">
 <span class="distance">0</span>M
 
-<script async defer src="//maps.googleapis.com/maps/api/js?key=AIzaSyBxKtiOh3lYNzXBI6jjjC_oOGaqF1Z6Uy0&callback=initMap"></script>
+<script async defer src="//maps.googleapis.com/maps/api/js?key=AIzaSyBxKtiOh3lYNzXBI6jjjC_oOGaqF1Z6Uy0"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="http://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js"></script>
